tests/expected/recovery/expressions/002_call_missing_arg.txt
{
  "type": "Program",
  "start": 0,
  "end": 105,
  "sourceType": "script",
  "hashbang": null,
  "body": [
    {
      "type": "VariableDeclaration",
      "start": 51,
      "end": 74,
      "kind": "const",
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 57,
          "end": 72,
          "id": {
            "type": "Identifier",
            "start": 57,
            "end": 63,
            "name": "broken"          },
          "init": {
            "type": "CallExpression",
            "start": 66,
            "end": 72,
            "callee": {
              "type": "Identifier",
              "start": 66,
              "end": 69,
              "name": "foo"            },
            "arguments": [
            ]          }        }
      ]    },
    {
      "type": "VariableDeclaration",
      "start": 75,
      "end": 104,
      "kind": "const",
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 81,
          "end": 103,
          "id": {
            "type": "Identifier",
            "start": 81,
            "end": 99,
            "name": "anchor_after_error"          },
          "init": {
            "type": "Literal",
            "start": 102,
            "end": 103,
            "value": 1,
            "raw": "1"          }        }
      ]    }
  ],
  "comments": [
    {
      "type": "Line",
      "start": 0,
      "end": 50,
      "value": " Call expression missing an argument expression."
    }
  ],
  "errors": [
    {
      "code": "K2002",
      "severity": "error",
      "message": "Expected ')', got ';'",
      "line": 2,
      "column": 23,
      "offset": 73
    }
  ]
}
error[K2002]: Expected ')', got ';'
  --> /Users/kakurega/dev/projects/kessel/tests/runners/../fixtures/recovery/expressions/002_call_missing_arg.js:2:23
   |
 2 | const broken = foo(1, ;
   |                       ^
  = note: see TS1005

--- Statistics ---
Arena: used=37824B reserved=16777216B ratio=0%
Parse errors: 1
